# semux-core

./: .gitignore  .gitmodules  .scrutinizer.yml  .swagger-codegen-ignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  LICENSE_3RD  README.md  appveyor.yml  crowdin.yml  findbugs-exclude.xml  pom.xml  run.sh  swagger.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  code_of_conduct.md  contributing.md  issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.travis/: install-osx-jdk8.sh  linux_start_xvfb.sh  macos_install_jdk8.sh  start_xvfb.sh  test_docker.sh
api/: pom.xml
assets/: multisig-owners.json  multisig-wallet.md  semux-core-version.json
client/: pom.xml
client/src/test/java/: TestClient.java
config/: genesis.json  ipfilter.json  log4j2.xml  logback.xml  semux.properties  simplelogger.properties
core/: pom.xml
core/config/: log4j2.xml
core/src/main/native/: CMakeLists.txt
core/src/main/native/crypto/: CMakeLists.txt  org_semux_crypto_Native.cpp  org_semux_crypto_Native.h  ripemd160.c
core/src/main/resources/: log4j2.xml  logo.icns
core/src/main/resources/genesis/: mainnet.json  testnet.json
core/src/test/java/org/semux/: KernelMock.java  LauncherTest.java
core/src/test/resources/: log4j2-test.xml
core/src/test/resources/config/: validators1000.csv
core/src/test/resources/database/: database-v0.tgz
core/src/test/resources/ipfilter/: blacklist.json  empty.json  exception_typo_in_rules1.json  exception_typo_in_rules2.json  exception_typo_in_rules4.json  exception_typo_in_rules5.json
core/src/test/resources/wallet/: backup_from_linux  backup_from_macos  backup_from_windows
docs/: Block-Explorers.md  Block-Rewards.md  Bug-Bounty-Program.md  Configurations.md  Console.md  Delegate-Pools.md  Delegates-and-Validators.md  Devnet.md  Full-Node-Setup.md  IDE-Setup.md  Message-Encoding.md  Multi-Sig-Wallet.md  Network-Protocol.md  README.md  RESTful-API.md  Semux-BFT-Consensus.md  Semux-Virtual-Machine.md  Signatures.md  Supply-and-Block-Rewards.md  Testnet.md  Versioning.md  Virtual-Machine-Contracts.md
misc/: formatter_intellij.xml  license_header.txt
misc/design/: splash.kra
misc/eclipse/: formatter.xml  guide.md
misc/intellij/: guide.md
misc/launch4j/: semux.l4j.ini
misc/systemd/: semux.service
package/: pom.xml
package/scripts/: semux-cli.sh
scripts/: release.sh  run-gui.sh  semux-cli.bat  semux-cli.sh  semux-gui.bat  semux-gui.sh  semux.bat  semux.sh
src/main/java/org/ethereum/vm/: CallCreate.java  DataWord.java  FeeSchedule.java  GasCost.java  LogInfo.java  MessageCall.java  OpCode.java  PrecompiledContracts.java  READEME.md  README.md  VM.java
src/main/java/org/semux/: CLI.java  Config.java  GUI.java  JvmOptions.java  Kernel.java  Launcher.java  Main.java  Memory.java  Network.java  Semux.java  Wrapper.java
src/main/java/org/semux/api/: APIHandler.java  ApiHandler.java  ApiHandlerImpl.java  ApiHandlerResponse.java  ApiVersion.java  Command.java  ConsoleApi.java  ConsoleApiImpl.java  FailableApiService.java  HttpChannelInitializer.java  HttpHandler.java  SemuxAPI.java  SemuxApi.java  SemuxApiImpl.java  SemuxApiService.java  SemuxHttpHandler.java  Version.java
src/main/java/org/semux/cli/: CLIOptions.java  DatabaseScanner.java  Option.java  OptionStart.java  SemuxCLI.java  SemuxCli.java  SemuxOption.java
src/main/java/org/semux/config/: AbstractConfig.java  ChainSpec.java  Config.java  Constants.java  DevNetConfig.java  DevnetConfig.java  MainNetConfig.java  MainnetConfig.java  TestNetConfig.java  TestnetConfig.java
src/main/java/org/semux/consensus/: ActivatedForks.java  Fork.java  Proof.java  Proposal.java  SemuxBFT.java  SemuxBft.java  SemuxSync.java  ValidatorActivatedFork.java  Vote.java  VoteSet.java  VoteType.java
src/main/java/org/semux/core/: Account.java  ActivatedForks.java  AddressBook.java  Amount.java  BftManager.java  Block.java  BlockCodec.java  BlockCodecV1.java  BlockCodecV2.java  BlockDecoder.java  BlockDecoderV1.java  BlockDecoderV2.java  BlockEncoder.java  BlockEncoderV1.java  BlockEncoderV2.java  BlockHeader.java  BlockHeaderData.java  BlockPart.java  Blockchain.java  BlockchainFactory.java  BlockchainImpl.java  BlockchainImplV2.java  BlockchainListener.java  CompactTransactionDecoder.java  CompactTransactionEncoder.java  Consensus.java  Delegate.java  Fork.java  ForkSignalSet.java  Genesis.java  PendingManager.java  Sync.java  SyncManager.java  Transaction.java  TransactionDecoder.java  TransactionDecoderV1.java  TransactionEncoder.java  TransactionEncoderV1.java  TransactionExecutor.java  TransactionResult.java  (+6 more)
src/main/native/: README.md
src/main/native/cmake/: toolchain-Darwin-x86_64.cmake  toolchain-Linux-x86_64.cmake  toolchain-Windows-x86_64.cmake  toolchain-darwin.cmake
src/main/native/crypto/: CMakeLists.txt  org_semux_crypto_Native.cpp  org_semux_crypto_Native.h  ripemd160.c  ripemd160.h
src/main/resources/: log4j2.xml  logback.xml  simplelogger.properties
src/main/resources/genesis/: devnet.json  mainnet.json  testnet.json
src/main/resources/native/Darwin-x86_64/: libsemuxcrypto.dylib
src/main/resources/native/aarch64/: libsodium.so.23
src/main/resources/native/linux32/: libsodium.so.23
src/main/resources/native/linux64/: libsodium.so.23
src/main/resources/native/macos/: libcrypto.dylib  libsodium.dylib
src/main/resources/native/macos64/: libcrypto.dylib  libsodium.23.dylib
src/main/resources/native/x86_64-darwin/: libsemuxcrypto.dylib  libsodium.23.dylib
src/test/java/org/semux/: ConfigTest.java  IntegrationTest.java  KernelMock.java  KernelTest.java  LauncherTest.java  LoggingAppender.java  TestAppender.java  TestLoggingAppender.java  TestUtils.java  Testnet.java  WrapperTest.java
src/test/resources/: log4j2-test.xml  logback-test.xml
src/test/resources/config/: validators1000.csv
src/test/resources/database/: database-v1.tgz
src/test/resources/ipfilter/: blacklist.json  exception_type_cast3.json  exception_typo_in_rules3.json  whitelist.json
src/test/resources/vector/: vector.json
swing-gui/: pom.xml
(+996 files in other folders)
